[package]
name = "conversations"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[package.metadata.lambda.deploy]
memory = 512                   # Function's memory
timeout = 60                   # Function's execution timeout
tracing = "active"             # Tracing mode
region = "eu-west-1"
enable-function-url = "true"
# role = "role-full-arn"         # Function's execution role
# env_file = ".env.production"   # File to load environment variables from
env = { "DYNAMODB_TABLE_NAME" = "chat-app" }      # Additional environment variables
# layers = [                     # List of layers to deploy with your function
#     "layer-full-arn"
# ]
tags = { "team" = "lambda" }   # List of AWS resource tags for this function